@@ -108,20 +108,28 @@ sub test {
 	my $this = shift;
 	my $target = $this->get_targetbuildsystem;
 
-	if (compat(12) or $target->name ne 'ninja') {
-		$target->test(@_);
-	} else {
-		# In compat 13 with meson+ninja, we prefer using "meson test"
-		# over "ninja test"
-		my %options = (
-			update_env => {
-				'LC_ALL' => 'C.UTF-8',
+	eval {
+		if (compat(12) or $target->name ne 'ninja') {
+			$target->test(@_);
+		} else {
+			# In compat 13 with meson+ninja, we prefer using "meson test"
+			# over "ninja test"
+			my %options = (
+				update_env => {
+					'LC_ALL' => 'C.UTF-8',
+				}
+				);
+			if ($this->get_parallel() > 0) {
+				$options{update_env}{MESON_TESTTHREADS} = $this->get_parallel();
 			}
-		);
-		if ($this->get_parallel() > 0) {
-			$options{update_env}{MESON_TESTTHREADS} = $this->get_parallel();
+			$this->doit_in_builddir(\%options, $this->{buildcmd}, "test", @_);
 		}
-		$this->doit_in_builddir(\%options, $this->{buildcmd}, "test", @_);
+	};
+	if (my $err = $@) {
+		if (-e $this->get_buildpath("meson-logs/testlog.txt")) {
+			$this->doit_in_builddir('tail', '-v', '-n', '+0', 'meson-logs/testlog.txt');
+		}
+		die $err;
 	}
 	return 1;
 }
