@@ -14,6 +14,9 @@ debhelper (12.1) UNRELEASED; urgency=medium
     a human readable error message early rather than warnings/errors
     about uninitialized variables.   Thanks to Ben Finney for the
     suggestion and the initial patch.  (Closes: #919853)
+  * meson.pm: Dump "meson-logs/testlog.txt" if testing fails with
+    an error.  Thanks to Jeremy Bicha for the suggestion.
+    (Closes: #918066)
 
  -- Niels Thykier <niels@thykier.net>  Fri, 04 Jan 2019 18:27:58 +0100
 
